# score2ly

./: .gitignore  .random-notes.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
sample_scores/: sources.json
src/score2ly/: audiveris.py  cli.py  config_utils.py  convert_pipeline.py  fix_omr_system_prompt.md  fix_pipeline.py  image_processing.py  lilypond.py  llm.py  ly_merge.py  metadata.py  musicxml2ly.py  musicxml_cleanup.py  musicxml_snippets.py  new_pipeline.py  omr_layout.py  pdf.py  pipeline.py  pipeline_common.py  placeholder_musicxml.xml  score_info.py  settings.py  stages.py  utils.py
tests/: test_cli.py  test_config_utils.py  test_pdf.py  test_utils.py
