[project]
name = "score2ly"
version = "0.1.0"
description = "Convert musical scores to LilyPond format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
score2ly = "score2ly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/score2ly"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]