[project]
name = "score2ly"
version = "0.1.0"
description = "Convert musical scores to LilyPond format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=5.0",
    "pdf2image>=1.17",
    "img2pdf>=0.5",
    "opencv-python>=4.10",
    "numpy>=2.0",
]

[project.scripts]
score2ly = "score2ly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/score2ly"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]