[project]
name = "score2ly"
version = "0.2.0"
description = "Convert musical scores to LilyPond format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=6.10,<7",
    "pdf2image>=1.17,<2",
    "Pillow>=12.2,<13",
    "img2pdf>=0.5,<1",
    "opencv-python>=4.10,<5",
    "numpy>=2.4,<3",
    "litellm>=1.83,<2",
    "instructor>=1.15,<2",
    "pydantic>=2.12,<3",
]

[project.scripts]
score2ly = "score2ly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/score2ly"]

[dependency-groups]
dev = [
    "pytest>=9.0,<10",
]
